k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __APP_NAME__
spec:
  selector:
    app: __APP_NAME__
  ports:
    - name: http
      port: __APP_PORT__
      targetPort: http
