k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __APP_NAME__
spec:
  ingressClassName: __INGRESS_CLASS_NAME__
  rules:
    - host: __INGRESS_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __APP_NAME__
                port:
                  number: __APP_PORT__
